--- a/Dashboard/Areas/PlayerScoreEntity/Views/PlayerGameWeakScore/Filter.cshtml
+++ b/Dashboard/Areas/PlayerScoreEntity/Views/PlayerGameWeakScore/Filter.cshtml
@@ -1,4 +1,4 @@
-﻿@model PlayerGameWeakFilter
+﻿@model PlayerGameWeakScoreFilter
 @{
     ViewData["Title"] = Localizer.Get("Advanced Search");
     Layout = "~/Views/Shared/_Layout.cshtml";
@@ -31,24 +31,15 @@
                         </select>
                     </div>
                 </div>
-
-                <div class="col-md-6 col-12">
+                
+                <div class="col-md-12 col-12">
                     <div class="mb-1">
-                        <label asp-for="Fk_Home" class="form-label">@Localizer.Get("HomeTeam")</label>
-                        <select asp-for="Fk_Home" class="select2 form-select" asp-items="@(new MultiSelectList(ViewData["Team"] as Dictionary<string,string>,"Key","Value"))">
-                            <option value="0">@Localizer.Get("All")</option>
+                        <label asp-for="Fk_ScoreTypes" class="form-label">@Localizer.Get("ScoreTypes")</label>
+                        <select asp-for="Fk_ScoreTypes" class="select2 form-select" asp-items="@(new MultiSelectList(ViewData["ScoreType"] as Dictionary<string,string>,"Key","Value"))">
                         </select>
                     </div>
                 </div>
-
-                <div class="col-md-6 col-12">
-                    <div class="mb-1">
-                        <label asp-for="Fk_Away" class="form-label">@Localizer.Get("AwayTeam")</label>
-                        <select asp-for="Fk_Away" class="select2 form-select" asp-items="@(new MultiSelectList(ViewData["Team"] as Dictionary<string,string>,"Key","Value"))">
-                            <option value="0">@Localizer.Get("All")</option>
-                        </select>
-                    </div>
-                </div>
+                
                 <div class="col-md-4 col-12">
                     <div class="mb-1">
                         <label asp-for="Fk_GameWeak" class="form-label">@Localizer.Get("GameWeak")</label>
@@ -78,42 +69,37 @@
                     </div>
                 </div>
                 
-            </div>
-
-            <div class="row g-1 mb-md-1">
-
                 <div class="col-md-6 col-12">
-                    <div class="mb-1">
-                        <label asp-for="RateFrom" class="form-label">@Localizer.Get("RateFrom")</label>
-                        <input type="text" class="form-control" asp-for="RateFrom">
+                        <div class="mb-1">
+                            <label asp-for="RateFrom" class="form-label">@Localizer.Get("RateFrom")</label>
+                            <input type="text" class="form-control" asp-for="RateFrom">
+                        </div>
+                    </div>
+    
+                    <div class="col-md-6 col-12">
+                        <div class="mb-1">
+                            <label asp-for="RateTo" class="form-label">@Localizer.Get("RateTo")</label>
+                            <input type="text" class="form-control" asp-for="RateTo">
+                        </div>
+                    </div>
+    
+                </div>
+                <div class="row g-1 mb-md-1">
+    
+                    <div class="col-md-6 col-12">
+                        <div class="mb-1">
+                            <label asp-for="PointsFrom" class="form-label">@Localizer.Get("PointsFrom")</label>
+                            <input type="text" class="form-control" asp-for="PointsFrom">
+                        </div>
+                    </div>
+    
+                    <div class="col-md-6 col-12">
+                        <div class="mb-1">
+                            <label asp-for="PointsTo" class="form-label">@Localizer.Get("PointsTo")</label>
+                            <input type="text" class="form-control" asp-for="PointsTo">
+                        </div>
                     </div>
                 </div>
-
-                <div class="col-md-6 col-12">
-                    <div class="mb-1">
-                        <label asp-for="RateTo" class="form-label">@Localizer.Get("RateTo")</label>
-                        <input type="text" class="form-control" asp-for="RateTo">
-                    </div>
-                </div>
-
-            </div>
-            <div class="row g-1 mb-md-1">
-
-                <div class="col-md-6 col-12">
-                    <div class="mb-1">
-                        <label asp-for="PointsFrom" class="form-label">@Localizer.Get("PointsFrom")</label>
-                        <input type="text" class="form-control" asp-for="PointsFrom">
-                    </div>
-                </div>
-
-                <div class="col-md-6 col-12">
-                    <div class="mb-1">
-                        <label asp-for="PointsTo" class="form-label">@Localizer.Get("PointsTo")</label>
-                        <input type="text" class="form-control" asp-for="PointsTo">
-                    </div>
-                </div>
-
-            </div>
             <hr />
             <br />
             <div class="row g-1 mb-md-1">
