--- a/Dashboard/Views/Shared/_menu.cshtml
+++ b/Dashboard/Views/Shared/_menu.cshtml
@@ -119,9 +119,37 @@
                     </a>
                 </li>
             }
+        
+            @if (viewList.Contains((int)DashboardViewEnum.PlayerGameWeakScoreState))
+            {
+                <li id="PlayerGameWeakScoreList" class="@(active ==DashboardViewEnum.PlayerGameWeakScoreState.ToString()?"active":"") nav-item">
+                    <a class="d-flex align-items-center"
+                       asp-action="Index" asp-area="PlayerStateEntity"
+                       asp-controller="PlayerGameWeakScoreState">
+                        <i data-feather='dribbble'></i>
+                        <span class="menu-title text-truncate">
+                            @Localizer.Get("PlayerGameWeakScoreStates")
+                        </span>
+                    </a>
+                </li>
+            }
+        
+            @if (viewList.Contains((int)DashboardViewEnum.PlayerSeasonScoreState))
+            {
+                <li id="PlayerGameWeakScoreList" class="@(active ==DashboardViewEnum.PlayerSeasonScoreState.ToString()?"active":"") nav-item">
+                    <a class="d-flex align-items-center"
+                       asp-action="Index" asp-area="PlayerStateEntity"
+                       asp-controller="PlayerSeasonScoreState">
+                        <i data-feather='dribbble'></i>
+                        <span class="menu-title text-truncate">
+                            @Localizer.Get("PlayerSeasonScoreStates")
+                        </span>
+                    </a>
+                </li>
+            }
 
 
-            @if (viewList.Contains((int)DashboardViewEnum.Team))
+        @if (viewList.Contains((int)DashboardViewEnum.Team))
             {
                 <li id="TeamList" class="@(active ==DashboardViewEnum.Team.ToString()?"active":"") nav-item">
                     <a class="d-flex align-items-center"
@@ -319,6 +347,25 @@
                             <li class="@(active == DashboardViewEnum.ScoreType.ToString()?"active":"")">
                                 <a class="d-flex align-items-center" asp-controller="ScoreType" asp-area="PlayerScoreEntity" asp-action="Index">
                                     <i data-feather='settings'></i><span class="menu-item text-truncate" data-i18n="Second Level">@Localizer.Get("ScoreTypes")</span>
+                                </a>
+                            </li>
+                        }
+                    </ul>
+                </li>
+            }
+        
+            @if (viewList.Contains((int)DashboardViewEnum.ScoreState))
+            {
+                <li class=" nav-item">
+                    <a class="d-flex align-items-center" href="#">
+                        <i data-feather='flag'></i><span class="menu-title text-truncate" data-i18n="Menu Levels">@Localizer.Get("ScoreState Data")</span>
+                    </a>
+                    <ul class="menu-content">
+                        @if (viewList.Contains((int)DashboardViewEnum.ScoreState))
+                        {
+                            <li class="@(active == DashboardViewEnum.ScoreState.ToString()?"active":"")">
+                                <a class="d-flex align-items-center" asp-controller="ScoreState" asp-area="PlayerStateEntity" asp-action="Index">
+                                    <i data-feather='settings'></i><span class="menu-item text-truncate" data-i18n="Second Level">@Localizer.Get("ScoreStates")</span>
                                 </a>
                             </li>
                         }
