--- a/Dashboard/Areas/PlayerStateEntity/Views/PlayerSeasonScoreState/Details.cshtml
+++ b/Dashboard/Areas/PlayerStateEntity/Views/PlayerSeasonScoreState/Details.cshtml
@@ -17,7 +17,7 @@
                 <dd class="col-sm-8 mb-1">@Model.Percent</dd>
                 
                 <dt class="col-sm-4 fw-bolder mb-1">@Html.DisplayNameFor(model => model.Player):</dt>
-                <dd class="col-sm-8 mb-1">@Model.Player</dd>
+                <dd class="col-sm-8 mb-1">@Model.Player.Name</dd>
                 
                 <dt class="col-sm-4 fw-bolder mb-1">@Html.DisplayNameFor(model => model.Points):</dt>
                 <dd class="col-sm-8 mb-1">@Model.Points</dd>
