--- a/Dashboard/Areas/AccountEntity/Views/Account/CreateOrEdit.cshtml
+++ b/Dashboard/Areas/AccountEntity/Views/Account/CreateOrEdit.cshtml
@@ -157,7 +157,7 @@
                                         <h3 class="mt-3">@Localizer.Get("Subscriptions")</h3>
                                         <hr />
                                         <div class="invoice-repeater">
-                                            <div data-repeater-list="Subscriptions" class="mb-2">
+                                            @*<div data-repeater-list="Subscriptions" class="mb-2">
                                                 @if (Model.Subscriptions != null && Model.Subscriptions.Any())
                                                 {
                                                     @for (int i = 0; i < Model.Subscriptions.Count; i++)
@@ -259,7 +259,7 @@
 
                                                     </div>
                                                 }
-                                            </div>
+                                            </div>*@
 
 
                                             <div class="row mb-3">
