--- a/Dashboard/Areas/TeamEntity/Views/Team/CreateOrEdit.cshtml
+++ b/Dashboard/Areas/TeamEntity/Views/Team/CreateOrEdit.cshtml
@@ -67,7 +67,7 @@
 
                                         <div class="col-md-6 col-12 d-flex ">
                                             <a href="#" class="me-25">
-                                                <img src="@($"{Model.ShirtStorageUrl + Model.ShirtStorageUrl}")" class="uploadedAvatar account-upload-img rounded me-50" height="100" width="100">
+                                                <img src="@($"{Model.ShirtStorageUrl + Model.ShirtImageUrl}")" class="uploadedAvatar account-upload-img rounded me-50" height="100" width="100">
                                             </a>
                                             <div class="d-flex align-items-end mt-75 ms-1">
                                                 <div>
