--- a/Dashboard/Areas/SubscriptionEntity/Views/Subscription/Details.cshtml
+++ b/Dashboard/Areas/SubscriptionEntity/Views/Subscription/Details.cshtml
@@ -16,7 +16,23 @@
                 <dt class="col-sm-4 fw-bolder mb-1">@Html.DisplayNameFor(model => model.Name):</dt>
                 <dd class="col-sm-8 mb-1">@Model.Name</dd>
 
+                <dt class="col-sm-4 fw-bolder mb-1">@Html.DisplayNameFor(model => model.ForAction):</dt>
+                <dd class="col-sm-8 mb-1">@Model.ForAction</dd>
 
+                <dt class="col-sm-4 fw-bolder mb-1">@Html.DisplayNameFor(model => model.IsActive):</dt>
+                <dd class="col-sm-8 mb-1">@Model.IsActive</dd>
+            </dl>
+        </div>
+        <div class="col-xl-7 col-12">
+            <dl class="row mb-0">
+                <dt class="col-sm-4 fw-bolder mb-1">@Html.DisplayNameFor(model => model.Cost):</dt>
+                <dd class="col-sm-8 mb-1">@Model.Cost</dd>
+
+                <dt class="col-sm-4 fw-bolder mb-1">@Html.DisplayNameFor(model => model.Name):</dt>
+                <dd class="col-sm-8 mb-1">@Model.Discount</dd>
+
+                <dt class="col-sm-4 fw-bolder mb-1">@Html.DisplayNameFor(model => model.Name):</dt>
+                <dd class="col-sm-8 mb-1">@Model.CostAfterDiscount</dd>
             </dl>
         </div>
 
