--- a/Dashboard/Areas/SubscriptionEntity/Views/Subscription/Index.cshtml
+++ b/Dashboard/Areas/SubscriptionEntity/Views/Subscription/Index.cshtml
@@ -56,7 +56,7 @@
                                 <h4 class="card-title"> @ViewData["Title"]</h4>
 
                             </div>
-                       
+
                             <div class="card-datatable">
                                 <table class="datatables datatables-ajax table table-responsive table">
                                     <thead>
@@ -86,6 +86,12 @@
 
                                             </th>
                                             <th>@Html.DisplayNameFor(model => row.Name)</th>
+                                            <th>@Html.DisplayNameFor(model => row.Cost)</th>
+                                            <th>@Html.DisplayNameFor(model => row.Discount)</th>
+                                            <th class="no-sort">@Html.DisplayNameFor(model => row.CostAfterDiscount)</th>
+                                            <th>@Html.DisplayNameFor(model => row.ForAction)</th>
+                                            <th>@Html.DisplayNameFor(model => row.IsActive)</th>
+
                                             <th>@Html.DisplayNameFor(model => row.CreatedAt)</th>
                                             <th>
                                                 @Html.DisplayNameFor(model => row.Id)
@@ -107,7 +113,7 @@
 @section scripts{
     <script src="~/apis/charts.js"></script>
     <script>
-        
+
         function LoadTable() {
             var dt_ajax_table = $('.datatables');
             if (dt_ajax_table.length) {
@@ -130,7 +136,7 @@
                             data: "name",
                             // render: function(data, type, row) {
                             //     var span = '';
-                            //    
+                            //
                             //     if (row.imageUrl != null) {
                             //
                             //         return '<div class="d-flex justify-content-left align-items-center"><div class= "avatar-wrapper" ><div class="avatar me-1">'
@@ -155,6 +161,33 @@
                             //
                             // }
                         },
+                        { data: "cost" },
+                        { data: "discount" },
+                        { data: "costAfterDiscount" },
+                        {
+                            data: "forAction",
+                            render: function (data, type, row) {
+                                if (data == true) {
+
+                                    return '@Localizer.Get("Yes")';
+                                 }
+                                 else {
+                                     return '@Localizer.Get("No")';
+                                 }
+                             }
+                        },
+                        {
+                            data: "isActive",
+                            render: function (data, type, row) {
+                                if (data == true) {
+
+                                    return '@Localizer.Get("Yes")';
+                                 }
+                                 else {
+                                     return '@Localizer.Get("No")';
+                                 }
+                             }
+                        },
                         { data: "createdAt" },
                         { data: "id" },
                     ]
@@ -176,7 +209,7 @@
 
         $(document).ready(function() {
             LoadTable();
-          
+
 
         });
     </script>
